kustomize/app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
#    cert-manager.io/cluster-issuer: letsencrypt
#    haproxy.org/forwarded-for: 'true'
#    haproxy.org/src-ip-header: cf-connecting-ip
    kubernetes.io/ingress.class: haproxy
  name: minimal-ingress
spec:
  rules:
    - host: foo.bar.com
      http:
        paths:
          - backend:
              service:
                name: app
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - foo.bar.com
      secretName: my-tls-secret
